--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4023,4 +4023,8 @@
     <!-- label for item that opens the profile choosing dialog -->
     <string name="global_action_choose_profile">Profile</string>
 
+    <!-- Vibration picker dialog title -->
+    <string name="vibration_picker_title">Select vibration</string>
+    <string name="vibration_picker_del_title">Delete vibration</string>
+
 </resources>
