--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4027,4 +4027,7 @@
     <string name="vibration_picker_title">Select vibration</string>
     <string name="vibration_picker_del_title">Delete vibration</string>
 
+    <!-- In WiFi notification -->
+    <string name="notify_turn_wifi_off_title">Turn Wi-Fi off</string>
+
 </resources>
