--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -525,7 +525,7 @@
     <!--  AOKP Strings can go here... -->
 
     <!--  Target/Action Strings -->
-    <string name="shortcut_label">AOKP Actions</string>
+    <string name="shortcut_label">XeHD Actions</string>
     <string name="action_home">Home</string>
     <string name="action_back">Back</string>
     <string name="action_recents">Recents</string>
